<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" 
    android:gravity="center_horizontal">
    
    
 <TextView android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/set_ip_text_view"
        style="@style/FontSize"
        android:text="@string/setting_ip_str"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginLeft="500dp"
        android:layout_marginTop="50dp"/>
 
    <LinearLayout android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_bg"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="110dp"
        android:padding="50dp">
        
        <EditText android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/account_edit_text"
            android:background="@drawable/username_edit_bg"
            style="@style/FontSize"
            android:hint="@string/username_hint_str"
            android:singleLine="true"/>
        
        <EditText android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/password_edit_text"
            android:background="@drawable/password_edit_bg"
            style="@style/FontSize"
            android:hint="@string/password_str"
            android:singleLine="true"/>
        
        <Button android:id="@+id/login_button"
            style="@style/FontSize"
            android:layout_width="match_parent"
            android:layout_height="60dp" 
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:text="@string/login_str"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue"/>
        
        <TextView android:id="@+id/register_text_view"
            android:layout_width="398dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:gravity="center"
            style="@style/FontSize"
            android:layout_marginLeft="20dp"
            android:paddingLeft="5dp"
            android:text="@string/register_str"
            android:textColor="@color/blue"
            android:background="@drawable/back"/>
            
          </LinearLayout>

</LinearLayout>

























































<!-- 王鹏飞 -->
